# Project-Tracker

./: .env  .env.example  .gitignore  .replit  DEPLOYMENT.md  DEPLOYMENT_SUMMARY.md  Procfile  README.md  app.py  app.yaml  config.py  deploy.sh  get_pg_connection.py  main.sh  migrate_data.py  package-lock.json  project_tracker.db  pyproject.toml  read_google_drive_csv.py  replit.nix  requirements.txt  supabase_config.py  test_supabase.py
Project-Tracker.git/: config
Project-Tracker.git/Project-Tracker.git/: packed-refs
Project-Tracker.git/Project-Tracker.git/objects/info/: packs
Project-Tracker.git/Project-Tracker.git/objects/pack/: pack-121426803b5fc82680d2123f1594d5c703483592.bitmap  pack-121426803b5fc82680d2123f1594d5c703483592.idx
Project-Tracker.git/info/: refs
Project-Tracker.git/objects/info/: commit-graph  packs
Project-Tracker.git/objects/pack/: pack-9e48c322e060d8d6535aa2b30a5580393b45fc37.bitmap  pack-9e48c322e060d8d6535aa2b30a5580393b45fc37.idx
instance/: project_tracker.db
migrations/versions/: 61a6e12a1e10_add_image_description_column.py  d00fd71f4f67_add_new_user_fields.py  d8c96db3a5f4_add_sample_image_column.py
static/: style.css
static/js/: table-resize.js
templates/: add.html  add_experiment.html  base.html  chatbot.html  chatbot_llm.html  chatbot_new.html  combined_view.html  compare.html  edit.html  edit_experiment.html  experiments.html  forgot_password.html  index.html  login.html  plots.html  prefix_table.html  reset_password.html  trash.html
templates/admin/: users.html
